# juceSonic

./: .gitignore  .gitmodules  CMakeLists.txt  JsfxHelper.cpp  JsfxHelper.h  JsfxNativeWindow.cpp  JsfxNativeWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  cross-compile.sh  fix-jsfx-includes.sh  jsfx.patch  linux-dependencies.sh
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: linux-arm64.cmake
jsfx/: CMakeLists.txt  CMakeLists.txt.backup  jsfx_stubs.cpp  lice_loader_init.cpp
jsfx/cmake/: EEL2Assembly.cmake  patch.cmake
jsfx/include/: jsfx.h  jsfx_gfx_api.h  jsfx_gfx_helpers.h
src/: AboutWindow.cpp  AboutWindow.h  ButtonRowComponent.h  Config.h.in  EmbeddedJsfxComponent.cpp  EmbeddedJsfxComponent.h  FileIO.cpp  FileIO.h  IOMatrixComponent.cpp  IOMatrixComponent.h  JsfxEditorWindow.cpp  JsfxEditorWindow.h  JsfxHelper.cpp  JsfxHelper.h  JsfxLiceComponent.cpp  JsfxLiceComponent.h  JsfxLiceFullscreenWindow.cpp  JsfxLiceFullscreenWindow.h  JsfxLogger.cpp  JsfxLogger.h  JsfxNativeWindow.cpp  JsfxNativeWindow.h  JsfxPluginTreeView.cpp  JsfxPluginTreeView.h  JsfxPluginWindow.cpp  JsfxPluginWindow.h  JuceSonicLookAndFeel.h  LibraryBrowser.cpp  LibraryBrowser.h  LibraryManager.cpp  LibraryManager.h  LiceHelper.h  ParameterSyncManager.cpp  ParameterSyncManager.h  ParameterUtils.cpp  ParameterUtils.h  Parser.h  PersistentFileChooser.cpp  PersistentFileChooser.h  PersistentState.h  (+40 more)
